--- a/header.css
+++ b/header.css
@@ -1,52 +1,62 @@
+html{
+    font-family: Roboto, Helvetica, Arial, sans-serif;
+}
 .header{
     /* background-color: brown; */
     width: 100%;
-    height: auto;
+    height: 116px;
     background: rgb(24, 158, 255);
 }
 .logo{
     margin-right: 5px;
-   
+    display: flex;
+    flex-direction: row;
+    height: 40px;
+}
+img.logo-left {
+    width: 50px;
+    height: 33px;
+}
+img.logo-right {
+    width: 87px;
+    height: 33px;
 }
 li{
     list-style: none;
 }
-.logo img{
-    width: 130px;
-    height: 40px;
-    margin-bottom: 10px;
-}
 .header-top{
-    padding-top: 20px;
+    padding-top: 10px;
     display: flex;
-    
+    height: 66px;
 }
 .function{
     display: flex;
+    height: 40px;
 }
 .fn{
-    margin-top:5px;
-    margin-left: 25px;
+    margin-top: 5px;
+    margin-left: 15px;
     width: 105px;
+    padding-top: 5px;
+    display: flex;
+    flex-direction: row;
 }
 i{
     font-size: 22px;
     color: white;
 }
-.fn span{
-    margin-left: 5px;
-}
+
 .search{
     /* flex-grow: 1; */
     height: 40px;
-    margin-right: 20px;
+    background-color: blue;
 
     color: #edeef2;
 }
 .search input{
     height: 40px;
     border-radius: 4px 0px 0px 4px;
-    width: 430px;
+    width: 420px;
     border: none;
     padding-left: 20px;
 }
@@ -68,8 +78,9 @@ button i{
     display: flex;
 }
 .header-bottom{
-    padding-top: 5px;
-    padding-bottom: 15px;
+   height: 20px;
+margin-bottom: 20px;
+    
 }
 .header-bottom .function{
     flex-basis: auto;
@@ -84,60 +95,48 @@ button i{
 .product-seen{
     width: 175px;
 }
+
 span{
     font-size: 13px;
     color: white;
+    display: block;
+    margin-left: 10px;
+    margin-top: 4px;
 }
-.body{
-    background-color: #f4f4f4;
+.cart{
+    border: oldlace 2px solid;
+    width: 143px;
+    padding-left: 10px;
 }
-.sub-menu{
-    background-color: #fff;
-    width: 245px;
-    border: black solid 0.5px;
-    border-radius: 5px;
-    height: 545px;
+span.number{
+    background-color: yellow;
+    color: black;
+    width: 20px;
+    height: 20px;
+    margin-right: 10px;
+    border-radius: 2px;
+    padding-left: 6px;
+    padding-top: 3px;
+    margin-top: 0px;
 }
-.body{
-   padding-top: 10px;
+.lines span{
+    margin: -4px 0px 0px 10px;
 }
-.body-top{
-    display: flex;
-    flex-direction: row;
+.image1 img{
+    width: 25px;
+    height: 31px;
 }
-.product{
-    display: flex;
-    flex-direction: row;
-   
+.shipping img{
+    width: 58px;
+    height: 28px;
+}
+.shipping{
+    margin-left: 40px;
     flex-grow: 1;
 }
-.list-image1{
-    width: 590px;
-    height: 360px;
+.func .fn{
+    margin-left: 23px;
 }
-.list-image2{
-    display: flex;
-    flex-direction: row;
-}
-.img2{
-    width: 295px;
-    height: 181px;
-}
-.img3{
-    width: 295px;
-    height: 181px;
-}
-.body img{
-width: 100%;
-height: 100%;
-background-size: cover;
-}
-.list-image3 img{
-    width: 205px;
-    height: 181px;
-}
-.list-image3{
-    display: flex;
-    flex-direction: row;
-    width: 410px;
+.func{
+    margin-left: 20px;
 }
